--- a/templates/game.html
+++ b/templates/game.html
@@ -35,7 +35,7 @@
         <h1 id="actual">Turno</h1>
     </div>
 
-    <script type="module" src="{{url_for('static',filename='/scripts/main.js')}}"></script>
+    <script type="module" src="{{url_for('static',filename='scripts/main.js')}}"></script>
 
     
 </body>
